Add app.js file and refactor code

--- a/CS2++/Dev-Problems/url-shortener/index.html
+++ b/CS2++/Dev-Problems/url-shortener/index.html
@@ -10,7 +10,7 @@
       <label>Enter a URL</label><br />
       <input
         type="text"
-        name="originalURL"
+        name="originalUrl"
         placeholder="Enter a URL..."
         required
       />
